add ErrorHandler Test code